--- a/react-map/tsconfig.json
+++ b/react-map/tsconfig.json
@@ -12,6 +12,7 @@
     "app/**/*.ts",
     "app/**/*.tsx",
     "expo-env.d.ts",
-    "components/MapView.tsx"
+    "components/MapView.tsx",
+    ".expo/types/**/*.ts"
   ]
 }
